syntax = "proto3";

package squareRootPackage;

service SquareRoot {
  rpc squareRoot (SquareRootRequest) returns (SquareRootResponse);
}

message SquareRootRequest { int32 number = 1; }

message SquareRootResponse { double squared_number = 1; }
